Refactor API structure and enhance authentication features
- Updated environment configuration to include JWT and SMTP settings.
- Removed obsolete AuthController and integrated user authentication logic into UserController.
- Implemented JWT-based authentication middleware for secure API access.
- Enhanced API routing with detailed error handling and logging.
- Added user management routes with role-based access control.
- Updated composer dependencies to require PHP 8.0.30 and added firebase/php-jwt for JWT handling.
- Improved error reporting and debugging capabilities in the API.

--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "phpmailer/phpmailer": "^6.5"
+        "php": ">=8.0.30",
+        "phpmailer/phpmailer": "^6.5",
+        "firebase/php-jwt": "^6.11"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Api\\": "app/api/",
+            "App\\Lib\\": "app/Lib/",
             "Core\\": "core/"
         }
     },
