--- a/.env
+++ b/.env
@@ -1,15 +1,23 @@
+# Variables d'environnement COUD
+
+# Base de données
 DB_HOST=localhost
-DB_NAME=test
+DB_NAME=coud_db
 DB_USER=root
 DB_PASS=
 
-SMTP_HOST=smtp.gmail.com
-SMTP_USER=cissedev5@gmail.com
-SMTP_PASS=uvxrgcbspppsmpbe
-SMTP_PORT=587
-DEFAULT_PASSWORD=password
-DEFAULT_HASH_PASSWORD=$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi
+# Configuration JWT
+JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
 
+# Configuration SMTP
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=votre_email@gmail.com
+SMTP_PASS=votre_mot_de_passe
+
+# Configuration de l'application
+APP_ENV=development
+APP_DEBUG=true
 
 DOMAINE=http://localhost/COUD_BOULETPLATE
 
