Update environment configuration for testing and SMTP settings
- Changed database name to 'test' for development purposes.
- Updated SMTP user credentials for email configuration.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # Base de données
 DB_HOST=localhost
-DB_NAME=coud_db
+DB_NAME=test
 DB_USER=root
 DB_PASS=
 
@@ -12,8 +12,8 @@ JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
 # Configuration SMTP
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=votre_email@gmail.com
-SMTP_PASS=votre_mot_de_passe
+SMTP_USER=cissedev5@gmail.com
+SMTP_PASS=your_password
 
 # Configuration de l'application
 APP_ENV=development
