--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=cissedev5@gmail.com
-SMTP_PASS=uvxrgcbspppsmpbe
+SMTP_PASS=your_password
 
 # Configuration de l'application
 APP_ENV=development
