--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteEngine On
 # Activer le mode de réécriture
 <IfModule mod_rewrite.c>
     # Redirection des requêtes API spécifiquement vers le point d'entrée de l'API
-    RewriteCond %{REQUEST_URI} ^/coud_bouletplate/api [NC]
+    RewriteCond %{REQUEST_URI} ^/gestion-pharmacie/api [NC]
     RewriteRule ^api/(.*)$ app/api/index.php [QSA,L]
 
     # Si le fichier ou le répertoire n'existe pas, rediriger vers index.php
