Update environment configuration and refactor routing for 'gestion-pharmacie'
- Changed database configuration in .env for better clarity.
- Updated .htaccess for correct API routing.
- Adjusted paths in phpinfo.php and various controllers to reflect the new project structure.
- Enhanced LoginController and RegisterController to utilize BASE_URL for redirection.
- Refactored ResetPasswordController by removing obsolete redirect method.
- Updated API routes and services to point to the new base path.
- Improved user feedback in login and reset password views with enhanced alert handling.
- Added new styles for better user experience in reset password views.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Variables d'environnement COUD
 
-# Base de données
+# Configuration de la base de données
 DB_HOST=localhost
 DB_NAME=test
 DB_USER=root
@@ -13,12 +13,12 @@ JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=cissedev5@gmail.com
-SMTP_PASS=your_password
+SMTP_PASS=
 
 # Configuration de l'application
 APP_ENV=development
 APP_DEBUG=true
 
-DOMAINE=http://localhost/COUD_BOULETPLATE
+DOMAINE=http://localhost/gestion-pharmacie
 
 hosting=5dXFWw9YNEic
