--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 DB_HOST=localhost
 DB_NAME=test
 DB_USER=root
-DB_PASS=
+DB_PASS=uvxrgcbspppsmpbe
 
 # Configuration JWT
 JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
