--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 
 # Configuration de la base de données
 DB_HOST=localhost
-DB_NAME=test
+DB_NAME=pharmacie
 DB_USER=root
-DB_PASS=uvxrgcbspppsmpbe
+DB_PASS=
 
 # Configuration JWT
 JWT_SECRET=jAEMdXzPWMWuuy+1QgyXx9qVoMT1n83/S0t7buOmFjQ=
